# validmind-library

./: .cursorrules  .gitignore  Makefile  README.md  README.pypi.md  _quarto.yml  _sidebar.yml  disk_clean.sh  docs.qmd  html_rendering_demo.py  objects.json  pyproject.toml  test_conversion.py  tox.ini
.github/: pull_request_template.md
.github/scripts/: release_notes_check.py
.github/workflows/: ai_explain.py  ai_explain.yaml  create_release_tag.yaml  dependency-testing.yaml  docs.yaml  integration.yaml  notify-library-release-notes.yaml  prod_patches_to_main.yaml  pypi.yaml  python.yaml  quarto-docs.yaml
docs/: README.md  _metadata.yml  _sidebar.yml  oidc-device-flow-release-notes.md  project_tree  validmind.css  validmind.html  validmind.qmd  validmind.tree
docs/_build/: search.js  validmind.html
docs/_build/validmind/: __version__.html  datasets.html  errors.html  test_suites.html  tests.html  unit_metrics.html  vm_models.html
docs/templates/: class.qmd.jinja2  errors.qmd.jinja2  function.qmd.jinja2  module.qmd.jinja2  sidebar.qmd.jinja2  styles.css  version.qmd.jinja2  vm_models.qmd.jinja2
docs/templates/macros/: decorators.jinja2  docstring.jinja2  (+3 more)
docs/validmind/: datasets.qmd  errors.html  errors.qmd  test_suites.qmd  tests.qmd  unit_metrics.qmd  validmind.qmd  version.qmd  vm_models.qmd
notebooks/: README.md  application_scorecard_full_suite_Excel_Final.ipynb  demo.ipynb
notebooks/agents/: banking_test_dataset.py  banking_tools.py  langchain_agent_simple_demo.ipynb  langchain_utils.py  langgraph_agent_demo.ipynb  langgraph_agent_simple_banking_demo.ipynb  langgraph_agent_simple_demo.ipynb  langgraph_financial_agent_demo.ipynb  utils.py
notebooks/code_samples/: quickstart_customer_churn_full_suite.ipynb  quickstart_customer_churn_full_suite_COPY.ipynb  quickstart_model_documentation.ipynb
notebooks/code_sharing/: 1_run_dataset_based_tests.ipynb  2_run_comparison_tests.ipynb  deepeval_integration_demo.ipynb  document_agentic_ai.ipynb  enable_pii_detection.ipynb  geval_deepeval_integration_demo.ipynb  plots_and_stats_demo.ipynb  post_processing_functions.ipynb  quickstart_model_documentation.ipynb  rawdata_usage.ipynb  test_configuration_updates_demo.ipynb  understand_utilize_rawdata.ipynb
notebooks/databricks/: validmind_databricks_quickstart.ipynb
notebooks/how_to/: add_context_to_llm_descriptions.ipynb  assign_score_complete_tutorial.ipynb  assign_scores_complete_tutorial.ipynb  configure_dataset_features.ipynb  configure_pii_detection.ipynb  custom_test_result_descriptions.ipynb  customize_test_result_descriptions.ipynb  document_multiple_results_for_the_same_test.ipynb  enable_pii_detection.ipynb  explore_test_suites.ipynb  explore_tests.ipynb  filter_input_columns.ipynb  load_datasets_predictions.ipynb  log_metrics_over_time.ipynb  quickstart_pii_detection.ipynb  run_documentation_sections.ipynb  run_documentation_tests_with_config.ipynb  run_tests_that_require_multiple_datasets.ipynb  run_unit_metrics.ipynb  understand_utilize_rawdata.ipynb  use_dataset_model_objects.ipynb
notebooks/quickstart/: quickstart_documentation.Rmd  quickstart_documentation.ipynb  quickstart_model_documentation.Rmd  quickstart_model_documentation.ipynb  quickstart_model_documentation.ipynb.backup  quickstart_model_documentation.out.ipynb  quickstart_model_documentation_oidc_device_flow.ipynb  quickstart_model_validation.Rmd  quickstart_model_validation.ipynb  quickstart_validation.Rmd  quickstart_validation.ipynb
notebooks/templates/: README.md  _copyright.ipynb  _install-initialize-validmind.ipynb  _next-steps.ipynb  about-validmind.ipynb  copyright.ipynb  e2e-notebook.ipynb  e2e_template.py  install-initialize-validmind.ipynb  next-steps.ipynb  upgrade-validmind.ipynb
notebooks/tutorials/: intro_for_model_developers.ipynb  validate_application_scorecard.ipynb
r/validmind/: DESCRIPTION  NAMESPACE  README.md
requirements/constraints/: py310-min.txt  py311-min.txt  py312-min.txt  py39-min.txt
scripts/: README.md  add_test_description.py  api_tree.py  bulk_ai_test_updates.py  bulk_unit_tests_updates.py  copyright.txt  copyright_files.py  copyright_notebooks.py  extract_descriptions.py  format_and_add.sh  generate_quarto_docs.py  generate_test_id_type.py  run_e2e_notebooks.py  verify_copyright.py  verify_notebook_copyright.py
tests/: run_test_utils.py  test_api_client.py  test_client.py  test_credentials_store.py  test_dataset.py  test_framework_init.py  test_full_suite.py  test_full_suite_nb.py  test_integration_tests.py  test_oidc_device.py  test_results.py  test_run_all_tests.py  test_scorer_decorator.py  test_server_llm_only.py  test_test_descriptions.py  test_unit_tests.py  test_validmind_tests.py  test_validmind_tests_module.py
tests/unit_tests/: test_ai_utils.py  test_documentation_text_summary.py  test_html_renderer.py  test_md_to_html.py  utils.py
validmind/: __init__.py  __version__.py  api_client.py  client.py  client_config.py  credentials_store.py  errors.py  input_registry.py  logging.py  objects.json  oidc_device.py  template.py  utils.py
validmind/ai/: test_descriptions.py  utils.py
validmind/datasets/: __init__.py
validmind/experimental/: agent.py  agents.py
validmind/html_templates/: content_blocks.py
validmind/models/: __init__.py  foundation.py  function.py  huggingface.py  metadata.py  pipeline.py  pytorch.py  r_model.py  sklearn.py
validmind/row_metrics/: __init__.py
validmind/scorer/: __init__.py
validmind/scorers/: __init__.py
validmind/test_suites/: __init__.py  classifier.py  cluster.py  embeddings.py  llm.py  nlp.py  parameters_optimization.py  regression.py  statsmodels_timeseries.py  summarization.py  tabular_datasets.py  text_data.py  time_series.py
validmind/tests/: __init__.py  __types__.py  _store.py  comparison.py  decorator.py  load.py  metadata.py  output.py  run.py  test_providers.py  utils.py
validmind/unit_metrics/: __init__.py  composite.py
validmind/vm_models/: __init__.py  figure.py  html_progress.py  html_renderer.py  input.py  model.py  output.py  result.py  text_generation_summary.py
(+967 files in other folders)
