[project]
name = "validmind"
version = "2.11.0"
description = "ValidMind Library"
readme = "README.pypi.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Andres Rodriguez", email = "andres@validmind.ai" },
  { name = "Juan Martinez", email = "juan@validmind.ai" },
  { name = "Anil Sorathiya", email = "anil@validmind.ai" },
  { name = "Luis Pallares", email = "luis@validmind.ai" },
  { name = "John Walz", email = "john@validmind.ai" },
]
dependencies = [
  "aiohttp[speedups]",
  "ipywidgets",
  "kaleido (>=0.2.1,!=0.2.1.post1,<1.0.0)",
  "matplotlib",
  "mistune (>=3.0.2,<4.0.0)",
  "nest-asyncio (>=1.6.0,<2.0.0)",
  "numpy (>=1.23,<2.0.0)",
  "openai (>=1)",
  "pandas (>=2.0.3,<3.0.0)",
  "plotly (>=5.0.0,<6.0.0)",
  "polars",
  "python-dotenv",
  "scikit-learn",
  "seaborn",
  "tabulate (>=0.9.0,<0.10.0)",
  "tiktoken",
  "tqdm",
  "anywidget",
  "beautifulsoup4",
]

[project.optional-dependencies]
all = [
  "torch (>=2.0.0)",
  "xgboost (>=1.5.2,<3)",
  "transformers (>=4.32.0,<5.0.0)",
  "pycocoevalcap",
  "ragas (>=0.2.3,<=0.2.7)",
  "sentencepiece (>=0.2.0,<0.3.0)",
  "langchain-openai (>=0.1.8)",
  "scipy",
  "statsmodels",
  "langdetect",
  "nltk (>=3.8.1,<4.0.0)",
  "textblob (>=0.18.0.post0,<0.19.0)",
  "evaluate",
  "rouge (>=1)",
  "bert-score (>=0.3.13)",
  "arch",
  "shap (>=0.46.0)",
  "scorecardpy (>=0.1.9.6,<0.2.0)",
]
huggingface = [
  "transformers (>=4.32.0,<5.0.0)",
  "sentencepiece (>=0.2.0,<0.3.0)",
]
llm = [
  "torch (>=2.0.0)",
  "transformers (>=4.32.0,<5.0.0)",
  "pycocoevalcap",
  "ragas (>=0.2.3,<=0.2.7)",
  "sentencepiece (>=0.2.0,<0.3.0)",
  "langchain-openai (>=0.1.8)",
  "deepeval (>3.3.9)",
]
nlp = [
  "langdetect",
  "nltk (>=3.8.1,<4.0.0)",
  "textblob (>=0.18.0.post0,<0.19.0)",
  "evaluate",
  "rouge (>=1)",
  "bert-score (>=0.3.13)",
  "pyarrow (<16)",
]
pytorch = ["torch (>=2.0.0)"]
stats = ["scipy", "statsmodels", "arch"]
xgboost = ["xgboost (>=1.5.2,<3)"]
explainability = ["shap (>=0.46.0)"]
credit_risk = ["scorecardpy (>=0.1.9.6,<0.2.0)"]
datasets = ["datasets (>=2.10.0,<3.0.0)"]
pii-detection = ["presidio-analyzer", "presidio-structured"]

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
click = "*"
cython = "^0.29.34"
docstring_parser = "*"
flake8 = "^7.0.0"
griffe = "*"
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
mdformat = "*"
papermill = "^2.4.0"
pdoc = "^14.4.0"
pre-commit = "^3.3.3"
sphinx = "^6.1.3"
sphinx-markdown-builder = "^0.5.5"
sphinx-rtd-theme = "^1.2.0"
twine = "^4.0.2"

[project.scripts]
vm-create-new-test = "scripts.create_new_test:generate_test"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.9.0"]

[tool.isort]
known_first_party = "validmind"
profile = "black"
