[project]
name = "validmind"
version = "2.13.5"
description = "ValidMind Library"
readme = "README.pypi.md"
requires-python = ">=3.9,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Andres Rodriguez", email = "andres@validmind.ai" },
  { name = "Juan Martinez", email = "juan@validmind.ai" },
  { name = "Anil Sorathiya", email = "anil@validmind.ai" },
  { name = "Luis Pallares", email = "luis@validmind.ai" },
  { name = "John Walz", email = "john@validmind.ai" },
]
dependencies = [
  "aiohttp[speedups] (<3.13.1)",
  "requests (>=2.28.0,<3.0.0)",
  "ipywidgets",
  "kaleido (>=1.2.0,<2.0.0)",
  "matplotlib",
  "mistune (>=3.0.2,<4.0.0)",
  "nest-asyncio (>=1.6.0,<2.0.0)",
  "numpy (>=1.23,<2.0.0) ; python_version < '3.14'",
  "numpy (>=2.3,<3.0.0) ; python_version >= '3.14'",
  "openai (>=1)",
  "pandas (>=2.0.3,<3.0.0)",
  "plotly (>=6.0.0)",
  "polars",
  "python-dotenv",
  "scikit-learn",
  "seaborn",
  "tabulate (>=0.9.0,<0.10.0)",
  "tiktoken",
  "tqdm",
  "anywidget",
  "beautifulsoup4",
  "segno (>=1.6.6,<2.0.0)",
]

[project.optional-dependencies]
all = [
  "torch (>=2.0.0)",
  "xgboost (>=1.5.2,<3)",
  "transformers (>=4.32.0,<5.0.0)",
  "pycocoevalcap",
  "ragas (>=0.2.3,<=0.2.7)",
  "langchain (>=0.2.0,<0.4.0)",
  "langchain-community (>=0.2.0,<0.4.0)",
  "sentencepiece (>=0.2.0,<0.3.0)",
  "langchain-openai (>=0.1.8)",
  "langchain-google-genai",
  "google-genai",
  "scipy",
  "statsmodels (>=0.14.2,<0.15.0)",
  "langdetect",
  "nltk (>=3.8.1,<4.0.0)",
  "textblob (>=0.18.0.post0,<0.19.0)",
  "datasets (>=2.10.0,<3.0.0) ; python_version < '3.14'",
  "datasets (>=4.4,<5.0.0) ; python_version >= '3.14'",
  "evaluate",
  "rouge (>=1)",
  "bert-score (>=0.3.13)",
  "pyarrow (<16) ; python_version < '3.13'",
  "pyarrow (>=20,<21) ; python_version == '3.13'",
  "pyarrow (>=22,<23) ; python_version >= '3.14'",
  "arch (>=7.0.0)",
  "shap (>=0.46.0)",
  "numba (>=0.65.1) ; python_version >= '3.14'",
  "llvmlite (>=0.47.0,<0.48) ; python_version >= '3.14'",
  "scorecardpy==0.1.9.6",
  "setuptools (<82)",
]
huggingface = [
  "transformers (>=4.32.0,<5.0.0)",
  "sentencepiece (>=0.2.0,<0.3.0)",
]
llm = [
  "torch (>=2.0.0)",
  "transformers (>=4.32.0,<5.0.0)",
  "pycocoevalcap",
  "ragas (>=0.2.3,<=0.2.7)",
  "langchain (>=0.2.0,<0.4.0)",
  "langchain-community (>=0.2.0,<0.4.0)",
  "datasets (>=2.10.0,<3.0.0) ; python_version < '3.14'",
  "datasets (>=4.4,<5.0.0) ; python_version >= '3.14'",
  "sentencepiece (>=0.2.0,<0.3.0)",
  "langchain-openai (>=0.1.8)",
  "langchain-google-genai",
  "google-genai",
  "pyarrow (<16) ; python_version < '3.13'",
  "pyarrow (>=20,<21) ; python_version == '3.13'",
  "pyarrow (>=22,<23) ; python_version >= '3.14'",
  "deepeval (>=3.7.0,<=3.7.5)",
]
nlp = [
  "langdetect",
  "nltk (>=3.8.1,<4.0.0)",
  "textblob (>=0.18.0.post0,<0.19.0)",
  "datasets (>=2.10.0,<3.0.0) ; python_version < '3.14'",
  "datasets (>=4.4,<5.0.0) ; python_version >= '3.14'",
  "transformers (>=4.32.0,<5.0.0)",
  "evaluate",
  "rouge (>=1)",
  "bert-score (>=0.3.13)",
  "pyarrow (<16) ; python_version < '3.13'",
  "pyarrow (>=20,<21) ; python_version == '3.13'",
  "pyarrow (>=22,<23) ; python_version >= '3.14'",
]
pytorch = ["torch (>=2.0.0)"]
stats = ["scipy", "statsmodels (>=0.14.2,<0.15.0)", "arch (>=7.0.0)"]
xgboost = ["xgboost (>=1.5.2,<3)"]
explainability = [
  "shap (>=0.46.0)",
  "numba (>=0.65.1) ; python_version >= '3.14'",
  "llvmlite (>=0.47.0,<0.48) ; python_version >= '3.14'",
]
credit_risk = ["scorecardpy==0.1.9.6", "setuptools (<82)"]
datasets = [
  "datasets (>=2.10.0,<3.0.0) ; python_version < '3.14'",
  "datasets (>=4.4,<5.0.0) ; python_version >= '3.14'",
  "pyarrow (<16) ; python_version < '3.13'",
  "pyarrow (>=20,<21) ; python_version == '3.13'",
  "pyarrow (>=22,<23) ; python_version >= '3.14'",
]
pii-detection = [
  "presidio-analyzer ; python_version < '3.14'",
  "presidio-analyzer (<2.2.360) ; python_version >= '3.14'",
  "presidio-structured",
]

[dependency-groups]
dev = [
  "black>=22.1.0,<26",
  "click",
  "cython>=0.29.34,<0.30",
  "docstring-parser",
  "flake8>=7.0.0,<8",
  "griffe",
  "ipykernel>=6.22.0,<7",
  "isort>=5.12.0,<6",
  "jupyter>=1.0.0,<2",
  "mdformat",
  "papermill>=2.4.0,<3",
  "pdoc>=14.4.0,<15",
  "pre-commit>=3.3.3,<4",
  "sphinx>=6.1.3,<7",
  "sphinx-markdown-builder>=0.5.5,<0.6",
  "sphinx-rtd-theme>=1.2.0,<2",
  "twine>=4.0.2,<5",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/validmind",
  "/README.pypi.md",
  "/LICENSE",
  "/pyproject.toml",
]

exclude = [
  "/.github",
  "/.vscode",
  "/docs",
  "/images",
  "/notebooks",
  "/tests",
  "/scripts",
  "/r",
  "/dist",
  "/build",
  "/uv.lock",
  "/.cursorrules",
  "/.flake8",
  "/.pre-commit-config.yaml",
  "/Makefile",
  "/disk_clean.sh",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["validmind"]

[tool.isort]
known_first_party = "validmind"
profile = "black"

[tool.uv]
exclude-newer = "7 days"
